learning/vine-compare/stp-master/build/lib/Parser/parsesmt2.output
Grammar

    0 $accept: cmd "end of file"

    1 cmd: commands "end of file"

    2 commands: commands cmdi
    3         | cmdi

    4 cmdi: LPAREN_TOK EXIT_TOK RPAREN_TOK
    5     | LPAREN_TOK CHECK_SAT_TOK RPAREN_TOK
    6     | LPAREN_TOK LOGIC_TOK STRING_TOK RPAREN_TOK
    7     | LPAREN_TOK NOTES_TOK attribute STRING_TOK RPAREN_TOK
    8     | LPAREN_TOK OPTION_TOK attribute RPAREN_TOK
    9     | LPAREN_TOK NOTES_TOK attribute DECIMAL_TOK RPAREN_TOK
   10     | LPAREN_TOK NOTES_TOK attribute RPAREN_TOK
   11     | LPAREN_TOK PUSH_TOK NUMERAL_TOK RPAREN_TOK
   12     | LPAREN_TOK POP_TOK NUMERAL_TOK RPAREN_TOK
   13     | LPAREN_TOK DECLARE_FUNCTION_TOK var_decl RPAREN_TOK
   14     | LPAREN_TOK DEFINE_FUNCTION_TOK function_decl RPAREN_TOK
   15     | LPAREN_TOK FORMULA_TOK an_formula RPAREN_TOK

   16 function_param: LPAREN_TOK STRING_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK RPAREN_TOK

   17 function_params: function_param
   18                | function_params function_param

   19 function_decl: STRING_TOK LPAREN_TOK function_params RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK an_term
   20              | STRING_TOK LPAREN_TOK function_params RPAREN_TOK BOOL_TOK an_formula
   21              | STRING_TOK LPAREN_TOK RPAREN_TOK BOOL_TOK an_formula
   22              | STRING_TOK LPAREN_TOK RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK an_term

   23 status: STRING_TOK

   24 attribute: SOURCE_TOK
   25          | CATEGORY_TOK
   26          | DIFFICULTY_TOK
   27          | VERSION_TOK
   28          | STATUS_TOK status
   29          | PRINT_TOK TRUE_TOK
   30          | PRINT_TOK FALSE_TOK

   31 var_decl: STRING_TOK LPAREN_TOK RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK
   32         | STRING_TOK LPAREN_TOK RPAREN_TOK BOOL_TOK
   33         | STRING_TOK LPAREN_TOK RPAREN_TOK LPAREN_TOK ARRAY_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK RPAREN_TOK

   34 an_mixed: an_formula
   35         | an_term
   36         | an_mixed an_formula
   37         | an_mixed an_term

   38 an_formulas: an_formula
   39            | an_formulas an_formula

   40 an_formula: TRUE_TOK
   41           | FALSE_TOK
   42           | FORMID_TOK
   43           | LPAREN_TOK EQ_TOK an_term an_term RPAREN_TOK
   44           | LPAREN_TOK DISTINCT_TOK an_terms RPAREN_TOK
   45           | LPAREN_TOK DISTINCT_TOK an_formulas RPAREN_TOK
   46           | LPAREN_TOK BVSLT_TOK an_term an_term RPAREN_TOK
   47           | LPAREN_TOK BVSLE_TOK an_term an_term RPAREN_TOK
   48           | LPAREN_TOK BVSGT_TOK an_term an_term RPAREN_TOK
   49           | LPAREN_TOK BVSGE_TOK an_term an_term RPAREN_TOK
   50           | LPAREN_TOK BVLT_TOK an_term an_term RPAREN_TOK
   51           | LPAREN_TOK BVLE_TOK an_term an_term RPAREN_TOK
   52           | LPAREN_TOK BVGT_TOK an_term an_term RPAREN_TOK
   53           | LPAREN_TOK BVGE_TOK an_term an_term RPAREN_TOK
   54           | LPAREN_TOK an_formula RPAREN_TOK
   55           | LPAREN_TOK NOT_TOK an_formula RPAREN_TOK
   56           | LPAREN_TOK IMPLIES_TOK an_formula an_formula RPAREN_TOK
   57           | LPAREN_TOK ITE_TOK an_formula an_formula an_formula RPAREN_TOK
   58           | LPAREN_TOK AND_TOK an_formulas RPAREN_TOK
   59           | LPAREN_TOK OR_TOK an_formulas RPAREN_TOK
   60           | LPAREN_TOK XOR_TOK an_formula an_formula RPAREN_TOK
   61           | LPAREN_TOK EQ_TOK an_formula an_formula RPAREN_TOK
   62           | LPAREN_TOK LET_TOK LPAREN_TOK lets RPAREN_TOK an_formula RPAREN_TOK
   63           | LPAREN_TOK BOOLEAN_FUNCTIONID_TOK an_mixed RPAREN_TOK
   64           | BOOLEAN_FUNCTIONID_TOK

   65 lets: let lets
   66     | let

   67 let: LPAREN_TOK STRING_TOK an_formula RPAREN_TOK
   68    | LPAREN_TOK STRING_TOK an_term RPAREN_TOK

   69 an_terms: an_term
   70         | an_terms an_term

   71 an_term: TERMID_TOK
   72        | LPAREN_TOK an_term RPAREN_TOK
   73        | SELECT_TOK an_term an_term
   74        | STORE_TOK an_term an_term an_term
   75        | LPAREN_TOK UNDERSCORE_TOK BVEXTRACT_TOK NUMERAL_TOK NUMERAL_TOK RPAREN_TOK an_term
   76        | LPAREN_TOK UNDERSCORE_TOK BVZX_TOK NUMERAL_TOK RPAREN_TOK an_term
   77        | LPAREN_TOK UNDERSCORE_TOK BVSX_TOK NUMERAL_TOK RPAREN_TOK an_term
   78        | ITE_TOK an_formula an_term an_term
   79        | BVCONCAT_TOK an_term an_term
   80        | BVNOT_TOK an_term
   81        | BVNEG_TOK an_term
   82        | BVAND_TOK an_term an_term
   83        | BVOR_TOK an_term an_term
   84        | BVXOR_TOK an_term an_term
   85        | BVXNOR_TOK an_term an_term
   86        | BVCOMP_TOK an_term an_term
   87        | BVSUB_TOK an_term an_term
   88        | BVPLUS_TOK an_term an_term
   89        | BVMULT_TOK an_term an_term
   90        | BVDIV_TOK an_term an_term
   91        | BVMOD_TOK an_term an_term
   92        | SBVDIV_TOK an_term an_term
   93        | SBVREM_TOK an_term an_term
   94        | SBVMOD_TOK an_term an_term
   95        | BVNAND_TOK an_term an_term
   96        | BVNOR_TOK an_term an_term
   97        | BVLEFTSHIFT_1_TOK an_term an_term
   98        | BVRIGHTSHIFT_1_TOK an_term an_term
   99        | BVARITHRIGHTSHIFT_TOK an_term an_term
  100        | LPAREN_TOK UNDERSCORE_TOK BVROTATE_LEFT_TOK NUMERAL_TOK RPAREN_TOK an_term
  101        | LPAREN_TOK UNDERSCORE_TOK BVROTATE_RIGHT_TOK NUMERAL_TOK RPAREN_TOK an_term
  102        | LPAREN_TOK UNDERSCORE_TOK BVREPEAT_TOK NUMERAL_TOK RPAREN_TOK an_term
  103        | UNDERSCORE_TOK BVCONST_DECIMAL_TOK NUMERAL_TOK
  104        | BVCONST_HEXIDECIMAL_TOK
  105        | BVCONST_BINARY_TOK
  106        | LPAREN_TOK BITVECTOR_FUNCTIONID_TOK an_mixed RPAREN_TOK
  107        | BITVECTOR_FUNCTIONID_TOK
  108        | LPAREN_TOK LET_TOK LPAREN_TOK lets RPAREN_TOK an_term RPAREN_TOK


Terminals, with rules where they appear

"end of file" (0) 0 1
error (256)
NUMERAL_TOK (258) 11 12 16 19 22 31 33 75 76 77 100 101 102 103
BVCONST_DECIMAL_TOK (259) 103
BVCONST_BINARY_TOK (260) 105
BVCONST_HEXIDECIMAL_TOK (261) 104
DECIMAL_TOK (262) 9
FORMID_TOK (263) 42
TERMID_TOK (264) 71
STRING_TOK (265) 6 7 16 19 20 21 22 23 31 32 33 67 68
BITVECTOR_FUNCTIONID_TOK (266) 106 107
BOOLEAN_FUNCTIONID_TOK (267) 63 64
SOURCE_TOK (268) 24
CATEGORY_TOK (269) 25
DIFFICULTY_TOK (270) 26
VERSION_TOK (271) 27
STATUS_TOK (272) 28
PRINT_TOK (273) 29 30
UNDERSCORE_TOK (274) 16 19 22 31 33 75 76 77 100 101 102 103
LPAREN_TOK (275) 4 5 6 7 8 9 10 11 12 13 14 15 16 19 20 21 22 31 32
    33 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
    63 67 68 72 75 76 77 100 101 102 106 108
RPAREN_TOK (276) 4 5 6 7 8 9 10 11 12 13 14 15 16 19 20 21 22 31 32
    33 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
    63 67 68 72 75 76 77 100 101 102 106 108
BVLEFTSHIFT_1_TOK (277) 97
BVRIGHTSHIFT_1_TOK (278) 98
BVARITHRIGHTSHIFT_TOK (279) 99
BVPLUS_TOK (280) 88
BVSUB_TOK (281) 87
BVNOT_TOK (282) 80
BVMULT_TOK (283) 89
BVDIV_TOK (284) 90
SBVDIV_TOK (285) 92
BVMOD_TOK (286) 91
SBVREM_TOK (287) 93
SBVMOD_TOK (288) 94
BVNEG_TOK (289) 81
BVAND_TOK (290) 82
BVOR_TOK (291) 83
BVXOR_TOK (292) 84
BVNAND_TOK (293) 95
BVNOR_TOK (294) 96
BVXNOR_TOK (295) 85
BVCONCAT_TOK (296) 79
BVLT_TOK (297) 50
BVGT_TOK (298) 52
BVLE_TOK (299) 51
BVGE_TOK (300) 53
BVSLT_TOK (301) 46
BVSGT_TOK (302) 48
BVSLE_TOK (303) 47
BVSGE_TOK (304) 49
BVSX_TOK (305) 77
BVEXTRACT_TOK (306) 75
BVZX_TOK (307) 76
BVROTATE_RIGHT_TOK (308) 101
BVROTATE_LEFT_TOK (309) 100
BVREPEAT_TOK (310) 102
BVCOMP_TOK (311) 86
BITVEC_TOK (312) 16 19 22 31 33
ARRAY_TOK (313) 33
BOOL_TOK (314) 20 21 32
TRUE_TOK (315) 29 40
FALSE_TOK (316) 30 41
NOT_TOK (317) 55
AND_TOK (318) 58
OR_TOK (319) 59
XOR_TOK (320) 60
ITE_TOK (321) 57 78
EQ_TOK (322) 43 61
IMPLIES_TOK (323) 56
DISTINCT_TOK (324) 44 45
LET_TOK (325) 62 108
EXIT_TOK (326) 4
CHECK_SAT_TOK (327) 5
LOGIC_TOK (328) 6
NOTES_TOK (329) 7 9 10
OPTION_TOK (330) 8
DECLARE_FUNCTION_TOK (331) 13
DEFINE_FUNCTION_TOK (332) 14
FORMULA_TOK (333) 15
PUSH_TOK (334) 11
POP_TOK (335) 12
SELECT_TOK (336) 73
STORE_TOK (337) 74


Nonterminals, with rules where they appear

$accept (83)
    on left: 0
cmd (84)
    on left: 1, on right: 0
commands (85)
    on left: 2 3, on right: 1 2
cmdi (86)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15, on right: 2 3
function_param (87)
    on left: 16, on right: 17 18
function_params (88)
    on left: 17 18, on right: 18 19 20
function_decl (89)
    on left: 19 20 21 22, on right: 14
status (90)
    on left: 23, on right: 28
attribute (91)
    on left: 24 25 26 27 28 29 30, on right: 7 8 9 10
var_decl (92)
    on left: 31 32 33, on right: 13
an_mixed (93)
    on left: 34 35 36 37, on right: 36 37 63 106
an_formulas (94)
    on left: 38 39, on right: 39 45 58 59
an_formula (95)
    on left: 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
    58 59 60 61 62 63 64, on right: 15 20 21 34 36 38 39 54 55 56 57
    60 61 62 67 78
lets (96)
    on left: 65 66, on right: 62 65 108
let (97)
    on left: 67 68, on right: 65 66
an_terms (98)
    on left: 69 70, on right: 44 70
an_term (99)
    on left: 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88
    89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107
    108, on right: 19 22 35 37 43 46 47 48 49 50 51 52 53 68 69 70
    72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92
    93 94 95 96 97 98 99 100 101 102 108


State 0

    0 $accept: . cmd "end of file"

    LPAREN_TOK  shift, and go to state 1

    cmd       go to state 2
    commands  go to state 3
    cmdi      go to state 4


State 1

    4 cmdi: LPAREN_TOK . EXIT_TOK RPAREN_TOK
    5     | LPAREN_TOK . CHECK_SAT_TOK RPAREN_TOK
    6     | LPAREN_TOK . LOGIC_TOK STRING_TOK RPAREN_TOK
    7     | LPAREN_TOK . NOTES_TOK attribute STRING_TOK RPAREN_TOK
    8     | LPAREN_TOK . OPTION_TOK attribute RPAREN_TOK
    9     | LPAREN_TOK . NOTES_TOK attribute DECIMAL_TOK RPAREN_TOK
   10     | LPAREN_TOK . NOTES_TOK attribute RPAREN_TOK
   11     | LPAREN_TOK . PUSH_TOK NUMERAL_TOK RPAREN_TOK
   12     | LPAREN_TOK . POP_TOK NUMERAL_TOK RPAREN_TOK
   13     | LPAREN_TOK . DECLARE_FUNCTION_TOK var_decl RPAREN_TOK
   14     | LPAREN_TOK . DEFINE_FUNCTION_TOK function_decl RPAREN_TOK
   15     | LPAREN_TOK . FORMULA_TOK an_formula RPAREN_TOK

    EXIT_TOK              shift, and go to state 5
    CHECK_SAT_TOK         shift, and go to state 6
    LOGIC_TOK             shift, and go to state 7
    NOTES_TOK             shift, and go to state 8
    OPTION_TOK            shift, and go to state 9
    DECLARE_FUNCTION_TOK  shift, and go to state 10
    DEFINE_FUNCTION_TOK   shift, and go to state 11
    FORMULA_TOK           shift, and go to state 12
    PUSH_TOK              shift, and go to state 13
    POP_TOK               shift, and go to state 14


State 2

    0 $accept: cmd . "end of file"

    "end of file"  shift, and go to state 15


State 3

    1 cmd: commands . "end of file"
    2 commands: commands . cmdi

    "end of file"  shift, and go to state 16
    LPAREN_TOK     shift, and go to state 1

    cmdi  go to state 17


State 4

    3 commands: cmdi .

    $default  reduce using rule 3 (commands)


State 5

    4 cmdi: LPAREN_TOK EXIT_TOK . RPAREN_TOK

    RPAREN_TOK  shift, and go to state 18


State 6

    5 cmdi: LPAREN_TOK CHECK_SAT_TOK . RPAREN_TOK

    RPAREN_TOK  shift, and go to state 19


State 7

    6 cmdi: LPAREN_TOK LOGIC_TOK . STRING_TOK RPAREN_TOK

    STRING_TOK  shift, and go to state 20


State 8

    7 cmdi: LPAREN_TOK NOTES_TOK . attribute STRING_TOK RPAREN_TOK
    9     | LPAREN_TOK NOTES_TOK . attribute DECIMAL_TOK RPAREN_TOK
   10     | LPAREN_TOK NOTES_TOK . attribute RPAREN_TOK

    SOURCE_TOK      shift, and go to state 21
    CATEGORY_TOK    shift, and go to state 22
    DIFFICULTY_TOK  shift, and go to state 23
    VERSION_TOK     shift, and go to state 24
    STATUS_TOK      shift, and go to state 25
    PRINT_TOK       shift, and go to state 26

    attribute  go to state 27


State 9

    8 cmdi: LPAREN_TOK OPTION_TOK . attribute RPAREN_TOK

    SOURCE_TOK      shift, and go to state 21
    CATEGORY_TOK    shift, and go to state 22
    DIFFICULTY_TOK  shift, and go to state 23
    VERSION_TOK     shift, and go to state 24
    STATUS_TOK      shift, and go to state 25
    PRINT_TOK       shift, and go to state 26

    attribute  go to state 28


State 10

   13 cmdi: LPAREN_TOK DECLARE_FUNCTION_TOK . var_decl RPAREN_TOK

    STRING_TOK  shift, and go to state 29

    var_decl  go to state 30


State 11

   14 cmdi: LPAREN_TOK DEFINE_FUNCTION_TOK . function_decl RPAREN_TOK

    STRING_TOK  shift, and go to state 31

    function_decl  go to state 32


State 12

   15 cmdi: LPAREN_TOK FORMULA_TOK . an_formula RPAREN_TOK

    FORMID_TOK              shift, and go to state 33
    BOOLEAN_FUNCTIONID_TOK  shift, and go to state 34
    LPAREN_TOK              shift, and go to state 35
    TRUE_TOK                shift, and go to state 36
    FALSE_TOK               shift, and go to state 37

    an_formula  go to state 38


State 13

   11 cmdi: LPAREN_TOK PUSH_TOK . NUMERAL_TOK RPAREN_TOK

    NUMERAL_TOK  shift, and go to state 39


State 14

   12 cmdi: LPAREN_TOK POP_TOK . NUMERAL_TOK RPAREN_TOK

    NUMERAL_TOK  shift, and go to state 40


State 15

    0 $accept: cmd "end of file" .

    $default  accept


State 16

    1 cmd: commands "end of file" .

    $default  reduce using rule 1 (cmd)


State 17

    2 commands: commands cmdi .

    $default  reduce using rule 2 (commands)


State 18

    4 cmdi: LPAREN_TOK EXIT_TOK RPAREN_TOK .

    $default  reduce using rule 4 (cmdi)


State 19

    5 cmdi: LPAREN_TOK CHECK_SAT_TOK RPAREN_TOK .

    $default  reduce using rule 5 (cmdi)


State 20

    6 cmdi: LPAREN_TOK LOGIC_TOK STRING_TOK . RPAREN_TOK

    RPAREN_TOK  shift, and go to state 41


State 21

   24 attribute: SOURCE_TOK .

    $default  reduce using rule 24 (attribute)


State 22

   25 attribute: CATEGORY_TOK .

    $default  reduce using rule 25 (attribute)


State 23

   26 attribute: DIFFICULTY_TOK .

    $default  reduce using rule 26 (attribute)


State 24

   27 attribute: VERSION_TOK .

    $default  reduce using rule 27 (attribute)


State 25

   28 attribute: STATUS_TOK . status

    STRING_TOK  shift, and go to state 42

    status  go to state 43


State 26

   29 attribute: PRINT_TOK . TRUE_TOK
   30          | PRINT_TOK . FALSE_TOK

    TRUE_TOK   shift, and go to state 44
    FALSE_TOK  shift, and go to state 45


State 27

    7 cmdi: LPAREN_TOK NOTES_TOK attribute . STRING_TOK RPAREN_TOK
    9     | LPAREN_TOK NOTES_TOK attribute . DECIMAL_TOK RPAREN_TOK
   10     | LPAREN_TOK NOTES_TOK attribute . RPAREN_TOK

    DECIMAL_TOK  shift, and go to state 46
    STRING_TOK   shift, and go to state 47
    RPAREN_TOK   shift, and go to state 48


State 28

    8 cmdi: LPAREN_TOK OPTION_TOK attribute . RPAREN_TOK

    RPAREN_TOK  shift, and go to state 49


State 29

   31 var_decl: STRING_TOK . LPAREN_TOK RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK
   32         | STRING_TOK . LPAREN_TOK RPAREN_TOK BOOL_TOK
   33         | STRING_TOK . LPAREN_TOK RPAREN_TOK LPAREN_TOK ARRAY_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK RPAREN_TOK

    LPAREN_TOK  shift, and go to state 50


State 30

   13 cmdi: LPAREN_TOK DECLARE_FUNCTION_TOK var_decl . RPAREN_TOK

    RPAREN_TOK  shift, and go to state 51


State 31

   19 function_decl: STRING_TOK . LPAREN_TOK function_params RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK an_term
   20              | STRING_TOK . LPAREN_TOK function_params RPAREN_TOK BOOL_TOK an_formula
   21              | STRING_TOK . LPAREN_TOK RPAREN_TOK BOOL_TOK an_formula
   22              | STRING_TOK . LPAREN_TOK RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK an_term

    LPAREN_TOK  shift, and go to state 52


State 32

   14 cmdi: LPAREN_TOK DEFINE_FUNCTION_TOK function_decl . RPAREN_TOK

    RPAREN_TOK  shift, and go to state 53


State 33

   42 an_formula: FORMID_TOK .

    $default  reduce using rule 42 (an_formula)


State 34

   64 an_formula: BOOLEAN_FUNCTIONID_TOK .

    $default  reduce using rule 64 (an_formula)


State 35

   43 an_formula: LPAREN_TOK . EQ_TOK an_term an_term RPAREN_TOK
   44           | LPAREN_TOK . DISTINCT_TOK an_terms RPAREN_TOK
   45           | LPAREN_TOK . DISTINCT_TOK an_formulas RPAREN_TOK
   46           | LPAREN_TOK . BVSLT_TOK an_term an_term RPAREN_TOK
   47           | LPAREN_TOK . BVSLE_TOK an_term an_term RPAREN_TOK
   48           | LPAREN_TOK . BVSGT_TOK an_term an_term RPAREN_TOK
   49           | LPAREN_TOK . BVSGE_TOK an_term an_term RPAREN_TOK
   50           | LPAREN_TOK . BVLT_TOK an_term an_term RPAREN_TOK
   51           | LPAREN_TOK . BVLE_TOK an_term an_term RPAREN_TOK
   52           | LPAREN_TOK . BVGT_TOK an_term an_term RPAREN_TOK
   53           | LPAREN_TOK . BVGE_TOK an_term an_term RPAREN_TOK
   54           | LPAREN_TOK . an_formula RPAREN_TOK
   55           | LPAREN_TOK . NOT_TOK an_formula RPAREN_TOK
   56           | LPAREN_TOK . IMPLIES_TOK an_formula an_formula RPAREN_TOK
   57           | LPAREN_TOK . ITE_TOK an_formula an_formula an_formula RPAREN_TOK
   58           | LPAREN_TOK . AND_TOK an_formulas RPAREN_TOK
   59           | LPAREN_TOK . OR_TOK an_formulas RPAREN_TOK
   60           | LPAREN_TOK . XOR_TOK an_formula an_formula RPAREN_TOK
   61           | LPAREN_TOK . EQ_TOK an_formula an_formula RPAREN_TOK
   62           | LPAREN_TOK . LET_TOK LPAREN_TOK lets RPAREN_TOK an_formula RPAREN_TOK
   63           | LPAREN_TOK . BOOLEAN_FUNCTIONID_TOK an_mixed RPAREN_TOK

    FORMID_TOK              shift, and go to state 33
    BOOLEAN_FUNCTIONID_TOK  shift, and go to state 54
    LPAREN_TOK              shift, and go to state 35
    BVLT_TOK                shift, and go to state 55
    BVGT_TOK                shift, and go to state 56
    BVLE_TOK                shift, and go to state 57
    BVGE_TOK                shift, and go to state 58
    BVSLT_TOK               shift, and go to state 59
    BVSGT_TOK               shift, and go to state 60
    BVSLE_TOK               shift, and go to state 61
    BVSGE_TOK               shift, and go to state 62
    TRUE_TOK                shift, and go to state 36
    FALSE_TOK               shift, and go to state 37
    NOT_TOK                 shift, and go to state 63
    AND_TOK                 shift, and go to state 64
    OR_TOK                  shift, and go to state 65
    XOR_TOK                 shift, and go to state 66
    ITE_TOK                 shift, and go to state 67
    EQ_TOK                  shift, and go to state 68
    IMPLIES_TOK             shift, and go to state 69
    DISTINCT_TOK            shift, and go to state 70
    LET_TOK                 shift, and go to state 71

    an_formula  go to state 72


State 36

   40 an_formula: TRUE_TOK .

    $default  reduce using rule 40 (an_formula)


State 37

   41 an_formula: FALSE_TOK .

    $default  reduce using rule 41 (an_formula)


State 38

   15 cmdi: LPAREN_TOK FORMULA_TOK an_formula . RPAREN_TOK

    RPAREN_TOK  shift, and go to state 73


State 39

   11 cmdi: LPAREN_TOK PUSH_TOK NUMERAL_TOK . RPAREN_TOK

    RPAREN_TOK  shift, and go to state 74


State 40

   12 cmdi: LPAREN_TOK POP_TOK NUMERAL_TOK . RPAREN_TOK

    RPAREN_TOK  shift, and go to state 75


State 41

    6 cmdi: LPAREN_TOK LOGIC_TOK STRING_TOK RPAREN_TOK .

    $default  reduce using rule 6 (cmdi)


State 42

   23 status: STRING_TOK .

    $default  reduce using rule 23 (status)


State 43

   28 attribute: STATUS_TOK status .

    $default  reduce using rule 28 (attribute)


State 44

   29 attribute: PRINT_TOK TRUE_TOK .

    $default  reduce using rule 29 (attribute)


State 45

   30 attribute: PRINT_TOK FALSE_TOK .

    $default  reduce using rule 30 (attribute)


State 46

    9 cmdi: LPAREN_TOK NOTES_TOK attribute DECIMAL_TOK . RPAREN_TOK

    RPAREN_TOK  shift, and go to state 76


State 47

    7 cmdi: LPAREN_TOK NOTES_TOK attribute STRING_TOK . RPAREN_TOK

    RPAREN_TOK  shift, and go to state 77


State 48

   10 cmdi: LPAREN_TOK NOTES_TOK attribute RPAREN_TOK .

    $default  reduce using rule 10 (cmdi)


State 49

    8 cmdi: LPAREN_TOK OPTION_TOK attribute RPAREN_TOK .

    $default  reduce using rule 8 (cmdi)


State 50

   31 var_decl: STRING_TOK LPAREN_TOK . RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK
   32         | STRING_TOK LPAREN_TOK . RPAREN_TOK BOOL_TOK
   33         | STRING_TOK LPAREN_TOK . RPAREN_TOK LPAREN_TOK ARRAY_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK RPAREN_TOK

    RPAREN_TOK  shift, and go to state 78


State 51

   13 cmdi: LPAREN_TOK DECLARE_FUNCTION_TOK var_decl RPAREN_TOK .

    $default  reduce using rule 13 (cmdi)


State 52

   19 function_decl: STRING_TOK LPAREN_TOK . function_params RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK an_term
   20              | STRING_TOK LPAREN_TOK . function_params RPAREN_TOK BOOL_TOK an_formula
   21              | STRING_TOK LPAREN_TOK . RPAREN_TOK BOOL_TOK an_formula
   22              | STRING_TOK LPAREN_TOK . RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK an_term

    LPAREN_TOK  shift, and go to state 79
    RPAREN_TOK  shift, and go to state 80

    function_param   go to state 81
    function_params  go to state 82


State 53

   14 cmdi: LPAREN_TOK DEFINE_FUNCTION_TOK function_decl RPAREN_TOK .

    $default  reduce using rule 14 (cmdi)


State 54

   63 an_formula: LPAREN_TOK BOOLEAN_FUNCTIONID_TOK . an_mixed RPAREN_TOK
   64           | BOOLEAN_FUNCTIONID_TOK .

    BVCONST_BINARY_TOK        shift, and go to state 83
    BVCONST_HEXIDECIMAL_TOK   shift, and go to state 84
    FORMID_TOK                shift, and go to state 33
    TERMID_TOK                shift, and go to state 85
    BITVECTOR_FUNCTIONID_TOK  shift, and go to state 86
    BOOLEAN_FUNCTIONID_TOK    shift, and go to state 34
    UNDERSCORE_TOK            shift, and go to state 87
    LPAREN_TOK                shift, and go to state 88
    BVLEFTSHIFT_1_TOK         shift, and go to state 89
    BVRIGHTSHIFT_1_TOK        shift, and go to state 90
    BVARITHRIGHTSHIFT_TOK     shift, and go to state 91
    BVPLUS_TOK                shift, and go to state 92
    BVSUB_TOK                 shift, and go to state 93
    BVNOT_TOK                 shift, and go to state 94
    BVMULT_TOK                shift, and go to state 95
    BVDIV_TOK                 shift, and go to state 96
    SBVDIV_TOK                shift, and go to state 97
    BVMOD_TOK                 shift, and go to state 98
    SBVREM_TOK                shift, and go to state 99
    SBVMOD_TOK                shift, and go to state 100
    BVNEG_TOK                 shift, and go to state 101
    BVAND_TOK                 shift, and go to state 102
    BVOR_TOK                  shift, and go to state 103
    BVXOR_TOK                 shift, and go to state 104
    BVNAND_TOK                shift, and go to state 105
    BVNOR_TOK                 shift, and go to state 106
    BVXNOR_TOK                shift, and go to state 107
    BVCONCAT_TOK              shift, and go to state 108
    BVCOMP_TOK                shift, and go to state 109
    TRUE_TOK                  shift, and go to state 36
    FALSE_TOK                 shift, and go to state 37
    ITE_TOK                   shift, and go to state 110
    SELECT_TOK                shift, and go to state 111
    STORE_TOK                 shift, and go to state 112

    $default  reduce using rule 64 (an_formula)

    an_mixed    go to state 113
    an_formula  go to state 114
    an_term     go to state 115


State 55

   50 an_formula: LPAREN_TOK BVLT_TOK . an_term an_term RPAREN_TOK

    BVCONST_BINARY_TOK        shift, and go to state 83
    BVCONST_HEXIDECIMAL_TOK   shift, and go to state 84
    TERMID_TOK                shift, and go to state 85
    BITVECTOR_FUNCTIONID_TOK  shift, and go to state 86
    UNDERSCORE_TOK            shift, and go to state 87
    LPAREN_TOK                shift, and go to state 116
    BVLEFTSHIFT_1_TOK         shift, and go to state 89
    BVRIGHTSHIFT_1_TOK        shift, and go to state 90
    BVARITHRIGHTSHIFT_TOK     shift, and go to state 91
    BVPLUS_TOK                shift, and go to state 92
    BVSUB_TOK                 shift, and go to state 93
    BVNOT_TOK                 shift, and go to state 94
    BVMULT_TOK                shift, and go to state 95
    BVDIV_TOK                 shift, and go to state 96
    SBVDIV_TOK                shift, and go to state 97
    BVMOD_TOK                 shift, and go to state 98
    SBVREM_TOK                shift, and go to state 99
    SBVMOD_TOK                shift, and go to state 100
    BVNEG_TOK                 shift, and go to state 101
    BVAND_TOK                 shift, and go to state 102
    BVOR_TOK                  shift, and go to state 103
    BVXOR_TOK                 shift, and go to state 104
    BVNAND_TOK                shift, and go to state 105
    BVNOR_TOK                 shift, and go to state 106
    BVXNOR_TOK                shift, and go to state 107
    BVCONCAT_TOK              shift, and go to state 108
    BVCOMP_TOK                shift, and go to state 109
    ITE_TOK                   shift, and go to state 110
    SELECT_TOK                shift, and go to state 111
    STORE_TOK                 shift, and go to state 112

    an_term  go to state 117


State 56

   52 an_formula: LPAREN_TOK BVGT_TOK . an_term an_term RPAREN_TOK

    BVCONST_BINARY_TOK        shift, and go to state 83
    BVCONST_HEXIDECIMAL_TOK   shift, and go to state 84
    TERMID_TOK                shift, and go to state 85
    BITVECTOR_FUNCTIONID_TOK  shift, and go to state 86
    UNDERSCORE_TOK            shift, and go to state 87
    LPAREN_TOK                shift, and go to state 116
    BVLEFTSHIFT_1_TOK         shift, and go to state 89
    BVRIGHTSHIFT_1_TOK        shift, and go to state 90
    BVARITHRIGHTSHIFT_TOK     shift, and go to state 91
    BVPLUS_TOK                shift, and go to state 92
    BVSUB_TOK                 shift, and go to state 93
    BVNOT_TOK                 shift, and go to state 94
    BVMULT_TOK                shift, and go to state 95
    BVDIV_TOK                 shift, and go to state 96
    SBVDIV_TOK                shift, and go to state 97
    BVMOD_TOK                 shift, and go to state 98
    SBVREM_TOK                shift, and go to state 99
    SBVMOD_TOK                shift, and go to state 100
    BVNEG_TOK                 shift, and go to state 101
    BVAND_TOK                 shift, and go to state 102
    BVOR_TOK                  shift, and go to state 103
    BVXOR_TOK                 shift, and go to state 104
    BVNAND_TOK                shift, and go to state 105
    BVNOR_TOK                 shift, and go to state 106
    BVXNOR_TOK                shift, and go to state 107
    BVCONCAT_TOK              shift, and go to state 108
    BVCOMP_TOK                shift, and go to state 109
    ITE_TOK                   shift, and go to state 110
    SELECT_TOK                shift, and go to state 111
    STORE_TOK                 shift, and go to state 112

    an_term  go to state 118


State 57
